--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@ h6 {
   color: #000 !important;
   padding: 5px;
   margin: 5px;
+  border-radius: 15px;
+  display: inline;
 }
 
 p {
@@ -32,7 +34,11 @@ p {
   border: 2px #ffff00 solid;
   border-radius: 15px;
   color: #000000 !important;
-  box-shadow: inset 0 0 0 2px #f2849e;
+  box-shadow:  0 0 0 2px #f2849e;
+  background-image: linear-gradient(to right, red, yellow);
+}
+
+.button a {
   background-image: linear-gradient(to right, red, yellow);
 }
 
@@ -40,7 +46,7 @@ p {
   border: 2px #ffff00 solid;
   border-radius: 15px;
   color: #000000 !important;
-  box-shadow: inset 0 0 0 2px #f2849e;
+  box-shadow:  0 0 0 2px #f2849e;
   background-image: linear-gradient(to right, red, yellow);
   transform: scale(2);
 }
@@ -74,6 +80,25 @@ nav {
   opacity: 1;
   text-decoration: none;
   color: #000;
+  line-height: 2.2;
+  padding: 5px;
+  background-color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+  color: #000 !important;
+  border-radius: 15px;
+  display: inline;
+}
+
+.email p {
+  opacity: 1;
+  color: #000;
+  line-height: 2.2;
+  padding: 5px;
+  background-color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+  color: #000 !important;
+  border-radius: 15px;
+  display: inline;
 }
 
 .email a:hover {
@@ -83,6 +108,20 @@ nav {
 }
 
 /*body*/
+
+.menu li{
+  opacity: 1;
+  color: #000;
+  line-height: 1.5;
+  background-color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+  color: #000 !important;
+  border-radius: 5px;
+  display: inline;
+  font-weight: bolder;
+  display: inline;
+  margin: 0 5px 0 5px;
+}
 
 .bg {
   z-index: -5;
@@ -150,10 +189,12 @@ footer {
   border-radius: 15px;
   margin-top: 10px;
   text-align: center;
+  clear: both;
 }
 
 footer p {
   display: inline;
+  background:  #ffff00;
 }
 
 @media only screen and (max-width: 1100px) {
