--- a/styles/images.css
+++ b/styles/images.css
@@ -1,5 +1,6 @@
 .infPhotoStaff {
-  width: 50%;
+  opacity: .8;
+  width: 75%;
   background: #ffff00;
   border-width: 5px;
   border-style: solid;
@@ -19,9 +20,26 @@
 }
 /* linear-gradient(to right, red, yellow)  */
 .infPhoto {
-  width: 45%;
-  border: 3px #ffff00 solid;
-  border-radius: 15px;
+  opacity: .8;
+  margin: 5px;
+  width: 250px;
+  height: 300px;
+  background: #ffff00;
+  border-width: 5px;
+  border-style: solid;
+  border-radius: 15%;
+  border-image: linear-gradient(
+    to right,
+    #ff0000 20%,
+    #008000 20%,
+    #008000 40%,
+    #0000ff 40%,
+    #0000ff 60%,
+    #800000 60%,
+    #800000 80%,
+    #d2691e 80%
+  );
+  border-image-slice: 1;
 }
 
 .infPhoto img {
